23_inclass_8_sc_ingress/ingress-2/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clarusshop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "balabandevops.online"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clarusshop-svc
                port: 
                  number: 80
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: account-svc
                port: 
                  number: 80
