23_inclass_8_sc_ingress/ingress-2/mying.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "nginx.balabandevops.online"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mynginx
                port: 
                  number: 80
    - host: "apache.balabandevops.online"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapache
                port: 
                  number: 80
